--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ include(CheckIPOSupported)
 include(CMakeDependentOption)
 
 # Name chosen for compatibility with CTest.
-option(BUILD_TESTING "Build test programs as well as shims" ON)
+option(SNMALLOC_BUILD_TESTING "Build test programs as well as shims" ON)
 
 option(SNMALLOC_HEADER_ONLY_LIBRARY "Use snmalloc has a header-only library" OFF)
 # Options that apply globally
@@ -288,7 +288,7 @@ if(NOT SNMALLOC_HEADER_ONLY_LIBRARY)
 
   set(TESTDIR ${CMAKE_CURRENT_SOURCE_DIR}/src/test)
 
-  if(BUILD_TESTING)
+  if(SNMALLOC_BUILD_TESTING)
     enable_testing()
     subdirlist(TEST_CATEGORIES ${TESTDIR})
   else()
@@ -448,7 +448,7 @@ if(NOT SNMALLOC_HEADER_ONLY_LIBRARY)
     target_compile_definitions(snmallocshim-checks-rust PRIVATE SNMALLOC_CHECK_CLIENT)
   endif()
 
-  if (BUILD_TESTING)
+  if (SNMALLOC_BUILD_TESTING)
     if (WIN32
     OR (CMAKE_SYSTEM_NAME STREQUAL NetBSD)
     OR (CMAKE_SYSTEM_NAME STREQUAL OpenBSD)
@@ -497,7 +497,7 @@ if(NOT SNMALLOC_HEADER_ONLY_LIBRARY)
       set(DEFINES "SNMALLOC_CHECK_CLIENT_MITIGATIONS=${MITIGATION}")
       add_shim(snmallocshim-${MITIGATION} SHARED ${SHIM_FILES})
       target_compile_definitions(snmallocshim-${MITIGATION} PRIVATE ${DEFINES})
-      if (BUILD_TESTING)
+      if (SNMALLOC_BUILD_TESTING)
         make_tests(${MITIGATION} ${DEFINES})
       endif()
     endforeach()
@@ -512,7 +512,7 @@ if(NOT SNMALLOC_HEADER_ONLY_LIBRARY)
       set(DEFINES "-DSNMALLOC_CHECK_CLIENT_MITIGATIONS=${MITIGATIONSET}")
       add_shim(snmallocshim-${MITIGATIONNAME} SHARED ${SHIM_FILES})
       target_compile_definitions(snmallocshim-${MITIGATIONNAME} PRIVATE ${DEFINES})
-      if (BUILD_TESTING)
+      if (SNMALLOC_BUILD_TESTING)
         make_tests(${MITIGATIONNAME} ${DEFINES})
       endif()
     endforeach()
