--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -387,10 +387,9 @@ if(NOT SNMALLOC_HEADER_ONLY_LIBRARY)
       target_compile_options(${name} PRIVATE
         -fomit-frame-pointer -ffunction-sections)
 
-      if (CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
+      check_cxx_compiler_flag(-mprfchw SUPPORT_PREFETCH_WRITE)
+      if (SUPPORT_PREFETCH_WRITE)
         target_compile_options(${name} PRIVATE -mprfchw)
-      else()
-        message(STATUS "Disabling -mprfchw for ${name} on ${CMAKE_SYSTEM_PROCESSOR}")
       endif()
       # Static TLS model is unsupported on Haiku.
       if (NOT CMAKE_SYSTEM_NAME STREQUAL "Haiku")
