--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,6 +95,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install build dependencies
       run: ${{ matrix.dependencies }}
+    - uses: mjp41/workaround8649@027dbedef21ad1c2fa7aa7fecbf4b87c7f7db45d
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build-type}} -G Ninja ${{ matrix.cmake-flags }} ${{ matrix.extra-cmake-flags }}
       # Build with a nice ninja status line
@@ -243,6 +244,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install build dependencies
       run: ${{ matrix.dependencies }}
+    
+    - uses: mjp41/workaround8649@027dbedef21ad1c2fa7aa7fecbf4b87c7f7db45d
+
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build-type}} -G Ninja ${{ matrix.cmake-flags }} ${{ matrix.extra-cmake-flags }}
       # Build with a nice ninja status line
