--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,11 +96,10 @@ jobs:
     - name: Install build dependencies
       run: ${{ matrix.dependencies }}
     
-    - name: Test runner
-      run: |
-        echo "Runner name: ${{ runner.name }} ${{ runner.os }} ${{ runner.os_version }} ${{ runner.labels }}"
+    - uses: mjp41/workaround8649@7138a6cf099e27773bf64c470b3a6dc56299a401
+      with:
+        os: ${{ matrix.os }}
 
-    - uses: mjp41/workaround8649@027dbedef21ad1c2fa7aa7fecbf4b87c7f7db45d
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build-type}} -G Ninja ${{ matrix.cmake-flags }} ${{ matrix.extra-cmake-flags }}
       # Build with a nice ninja status line
@@ -249,13 +248,11 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install build dependencies
       run: ${{ matrix.dependencies }}
-    
-    - name: Test runner
-      run: |
-        echo "Runner name: ${{ runner.name }} ${{ runner.os }} ${{ runner.os_version }} ${{ runner.labels }}"
 
-    - uses: mjp41/workaround8649@027dbedef21ad1c2fa7aa7fecbf4b87c7f7db45d
-
+    - uses: mjp41/workaround8649@7138a6cf099e27773bf64c470b3a6dc56299a401
+      with:
+        os: ${{ matrix.os }}
+  
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build-type}} -G Ninja ${{ matrix.cmake-flags }} ${{ matrix.extra-cmake-flags }}
       # Build with a nice ninja status line
