--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -161,7 +161,7 @@ jobs:
         os:
           - version: '9.2'
             dependencies: |
-              pkg_add cmake ninja-build gcc10
+              /usr/sbin/pkg_add cmake ninja-build gcc10
         build-type: [ Release ]
       # Don't abort runners if a single one fails
       fail-fast: false
