--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,5 @@ local_dynamic_tls = ["snmalloc-sys/local_dynamic_tls"]
 win8compat = ["snmalloc-sys/win8compat"]
 usecxx17 = ["snmalloc-sys/usecxx17"]
 check = ["snmalloc-sys/check"]
+lto = ["snmalloc-sys/lto"]
+notls = ["snmalloc-sys/notls"]
