adding macos 14 (arm64) to CI (#181)

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest, macos-11, ubuntu-latest]
+        os: [windows-latest, macos-11, macos-14, ubuntu-latest]
         rust: [stable, nightly]
     steps:
     - uses: actions-rs/toolchain@v1
