--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -361,7 +361,7 @@ jobs:
         # Build each combination of OS and release/debug variants
         os: [ windows-2019 ]
         build-type: [ Release, Debug ]
-        arch: [ Win32, x64, ARM64, ARM64EC ]
+        arch: [ Win32, x64 ]
         toolchain: [ "", "-T ClangCL" ]
         extra-cmake-flags: [ "" ]
         # Add an extra check for the Windows 8 compatible PAL
@@ -392,20 +392,24 @@ jobs:
             build-type: Release
             arch: ARM64
             toolchain: ""
+            build-only: yes
           - os: windows-2022
             build-type: Debug
             arch: ARM64
             toolchain: ""
+            build-only: yes
           - os: windows-2022
             build-type: Release
             arch: ARM64EC
             toolchain: ""
             extra-cmake-flags: -DCMAKE_SYSTEM_VERSION="10.0.22621.0"
+            build-only: yes
           - os: windows-2022
             build-type: Debug
             arch: ARM64EC
             toolchain: ""
             extra-cmake-flags: -DCMAKE_SYSTEM_VERSION="10.0.22621.0"
+            build-only: yes
         
       # Don't abort runners if a single one fails
       fail-fast: false
@@ -421,6 +425,7 @@ jobs:
       run: cmake --build ${{github.workspace}}/build -- /m /p:Configuration=${{ matrix.build-type }}
       # Run the tests.
     - name: Test
+      if: ${{ matrix.build-only != 'yes' }}
       working-directory: ${{ github.workspace }}/build
       run: ctest -j 2 --interactive-debug-mode 0 --output-on-failure -C ${{ matrix.build-type }} --timeout 400
       timeout-minutes: 20
