--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -388,6 +388,28 @@ jobs:
             build-type: Debug
             arch: x64
             toolchain: ""
+          - os: windows-2022
+            build-type: Release
+            arch: ARM64
+            toolchain: ""
+            build-only: yes
+          - os: windows-2022
+            build-type: Debug
+            arch: ARM64
+            toolchain: ""
+            build-only: yes
+          - os: windows-2022
+            build-type: Release
+            arch: ARM64EC
+            toolchain: ""
+            extra-cmake-flags: -DCMAKE_SYSTEM_VERSION="10.0.22621.0"
+            build-only: yes
+          - os: windows-2022
+            build-type: Debug
+            arch: ARM64EC
+            toolchain: ""
+            extra-cmake-flags: -DCMAKE_SYSTEM_VERSION="10.0.22621.0"
+            build-only: yes
         
       # Don't abort runners if a single one fails
       fail-fast: false
@@ -403,6 +425,7 @@ jobs:
       run: cmake --build ${{github.workspace}}/build -- /m /p:Configuration=${{ matrix.build-type }}
       # Run the tests.
     - name: Test
+      if: ${{ matrix.build-only != 'yes' }}
       working-directory: ${{ github.workspace }}/build
       run: ctest -j 2 --interactive-debug-mode 0 --output-on-failure -C ${{ matrix.build-type }} --timeout 400
       timeout-minutes: 20
