fix clippy warnings (#184)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,4 @@ usecxx17 = ["snmalloc-sys/usecxx17"]
 check = ["snmalloc-sys/check"]
 lto = ["snmalloc-sys/lto"]
 notls = ["snmalloc-sys/notls"]
+stats = ["snmalloc-sys/stats"]
