--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 # conventional build dirs
-release*/
-debug*/
-build*/
-cmake-build-*/
+/release*/
+/debug*/
+/build*/
+/cmake-build-*/
+/out*/
+
+/tidy.fail
 
 # cmake intermediate files
-CMakeFiles/
+/CMakeFiles/
 
 # vscode dirs
 .vscode/
