snmalloc to benefits from recent fixes. (#189)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,4 @@ check = ["snmalloc-sys/check"]
 lto = ["snmalloc-sys/lto"]
 notls = ["snmalloc-sys/notls"]
 stats = ["snmalloc-sys/stats"]
+#nowait-on-target = ["snmalloc-sys/nowait-on-target"]
